# DiscoAS

./: .gitignore  DiscoAS.spec  Discover.py  Discover_gui.py  README.md  clear_cache.py  load_playlist_json.py  main.py  pyproject.toml  requirements-lock.txt  requirements.txt  test_qq_api.py
MD FOR AGENT/: APP_FLOW.md  FIRST.MD  PRD.md  PROGRESS.md  UI.md
log/: __init__.py
settings/: gui_setting.py  i18n.py  music_setting.py  setting_gui.py  user_data_path.py
settings/i18n/: en.json  en_US.json  zh_CN.json  zh_TW.json
tests/: test_i18n.py  test_platform_get_json.py  test_single_instance.py
user_data/settings/: gui_setting.json  music_setting.json
