[project]
name = "DiscoAS"
version = "1.0.0"

[project.scripts]
discoas = "main:main"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "SIM"]
ignore = [
    "E501",  # 行长度已在 line-length 管
    "N802",  # Qt 事件方法必须 camelCase (mousePressEvent 等)
    "N803",  # 参数名 ParameterName/ParameterValue 是历史遗留
    "N806",  # 函数内常量 PROCESS_QUERY_LIMITED_INFORMATION 等
    "N815",  # pyqtSignal 的 valueChanged 必须 camelCase
]

[tool.ruff.lint.isort]
known-first-party = ["settings", "platforms", "log"]